feat: update multiplayer, re-shuffle, and interval for multiplayer
